# GameDevStudyNote

./: .gitignore
ComputerGraphics/: CMakeLists.txt  build.bat
ComputerGraphics/Common/: common.h  tgaimage.cpp  tgaimage.h
ComputerGraphics/Math/: mat4.hpp  mathutil.cpp  mathutil.hpp  rect.hpp  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl  vec4.hpp  vec4.inl
ComputerGraphics/RayTracer/: camera.cpp  camera.h  entity.h  frame_buffer.h  main.cpp  material.h  ray.h  scene.cpp  scene.h  shader.h  sphere.h
ComputerGraphics/SoftwareRenderer/: application.h  color.cpp  color.h  framebuffer.h  graphics.cpp  graphics.h  ishader.h  main.cpp  mesh.h  model.h  renderstates.h  texture.h  tinygl.cpp  tinygl.h  util.h  vertex.h
ComputerGraphics/SoftwareRenderer/resources/: test.tga
OpenGL/: CMakeLists.txt  shader_properties.md
OpenGL/core/: app.h  application.cpp  application.h  camera.cpp  camera.h  common.cpp  common.h  cube.cpp  cube.h  cubemap.cpp  cubemap.h  depthmap.cpp  depthmap.h  entrypoint.h  framebuffer.cpp  framebuffer.h  glad.c  headers.h  idrawable.h  iglresource.h  light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  quad.cpp  quad.h  renderer.cpp  renderer.h  resources.cpp  resources.h  shader.cpp  shader.h  texture.cpp  texture.h  transparent_object.h  utility.cpp  utility.h
OpenGL/core/renderer/: indexbuffer.cpp  indexbuffer.h  vertex.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
OpenGL/include/glad/: glad.h
OpenGL/lib/: glfw3.lib
OpenGL/resources/shaders/: color.frag  frag.frag  instance.frag  instance.vert  light.frag  light.vert  model.vert  refraction.frag  showdepth.frag  vert.vert
OpenGL/resources/shaders/geometry/: geometry.frag  geometry.geom  geometry.vert  shownormal.frag  shownormal.geom  shownormal.vert
OpenGL/resources/shaders/posteffect/: blur.frag  edgedetection.frag
OpenGL/sandbox/Basic/: main.cpp
OpenGL/sandbox/FrameBuffer/resources/shaders/: displacement.frag  framebuffer.vert  gaussian_blur.frag  reflection.vert  sharpen.frag
OpenGL/sandbox/Lighting/: main.cpp
OpenGL/sandbox/Lighting/resources/shaders/: light.frag  light.vert
OpenGL/sandbox/Shadow/: main.cpp
OpenGL/sandbox/framebuffer/: main.cpp
OpenGL/sandbox/framebuffer/shaders/: framebuffer.frag  grayscale.frag  model.frag  reflection.frag
OpenGL/sandbox/test/: main.cpp
RayTracer/: Cpp.sln
RayTracer/RayTracer/: RayTracer.vcxproj  RayTracer.vcxproj.filters  color.cpp  color.h  frame_buffer.cpp  main.cpp  material.h  scene.cpp  shader.cpp  shader.h  sphere.cpp  sphere.h  test.ppm  utility.cpp  utility.h  vec3.hpp
ShaderToy/: ray_marching.glsl
